--- a/dandiset.yaml
+++ b/dandiset.yaml
@@ -6,9 +6,34 @@ access:
 - schemaKey: AccessRequirements
   status: dandi:OpenAccess
 assetsSummary:
-  numberOfBytes: 0
-  numberOfFiles: 0
+  approach:
+  - name: electrophysiological approach
+    schemaKey: ApproachType
+  dataStandard:
+  - identifier: RRID:SCR_015242
+    name: Neurodata Without Borders (NWB)
+    schemaKey: StandardsType
+  measurementTechnique:
+  - name: analytical technique
+    schemaKey: MeasurementTechniqueType
+  - name: voltage clamp technique
+    schemaKey: MeasurementTechniqueType
+  - name: current clamp technique
+    schemaKey: MeasurementTechniqueType
+  numberOfBytes: 261991907
+  numberOfFiles: 4
+  numberOfSubjects: 3
   schemaKey: AssetsSummary
+  species:
+  - identifier: http://purl.obolibrary.org/obo/NCBITaxon_9545
+    name: Macaca nemestrina - Pigtail macaque
+    schemaKey: SpeciesType
+  variableMeasured:
+  - VoltageClampStimulusSeries
+  - CurrentClampStimulusSeries
+  - ProcessingModule
+  - CurrentClampSeries
+  - VoltageClampSeries
 citation: Mei, Nicholas (2023) 20230630_AIBS_Patchseq_nonhuman_primate (Version draft)
   [Data set]. DANDI archive. https://dandiarchive.org/dandiset/000569/draft
 contributor:
