[backups2datalad] Only some metadata updates

--- a/dandiset.yaml
+++ b/dandiset.yaml
@@ -45,6 +45,7 @@ contributor:
   roleName:
   - dcite:ContactPerson
   schemaKey: Person
+- {}
 dateCreated: '2023-06-28T23:52:27.567158+00:00'
 description: HMBA Lein PatchSeq upload (Q2 2023)
 ethicsApproval: []
@@ -56,12 +57,14 @@ license:
 manifestLocation:
 - https://api.dandiarchive.org/api/dandisets/000569/versions/draft/assets/
 name: 20230630_AIBS_Patchseq_nonhuman_primate
-protocol: []
+protocol:
+- https://www.protocols.io/view/patch-seq-recording-and-extraction-8epv51n45l1b/v3
 relatedResource: []
 repository: https://dandiarchive.org
 schemaKey: Dandiset
 schemaVersion: 0.6.4
-studyTarget: []
+studyTarget:
+- Multimodal classification of cell types in the non-human primate.
 url: https://dandiarchive.org/dandiset/000569/draft
 version: draft
 wasGeneratedBy: []
