--- a/dandiset.yaml
+++ b/dandiset.yaml
@@ -96,6 +96,7 @@ contributor:
   schemaKey: Organization
   url: https://www.nimh.nih.gov/
 dateCreated: '2023-06-28T23:52:27.567158+00:00'
+datePublished: '2023-07-06T16:30:03.950867+00:00'
 description: HMBA Lein PatchSeq upload (Q2 2023)
 ethicsApproval: []
 id: DANDI:000569/draft
@@ -111,6 +112,18 @@ manifestLocation:
 name: 20230630_AIBS_Patchseq_nonhuman_primate
 protocol:
 - https://www.protocols.io/view/patch-seq-recording-and-extraction-8epv51n45l1b/v3
+publishedBy:
+  endDate: '2023-07-06T16:30:03.950867+00:00'
+  id: urn:uuid:af712cf5-f39f-47ba-ab60-846e668cebcf
+  name: DANDI publish
+  schemaKey: PublishActivity
+  startDate: '2023-07-06T16:30:03.950867+00:00'
+  wasAssociatedWith:
+  - id: urn:uuid:b8425b3e-3e90-4128-a5a9-1fa8e93a705e
+    identifier: RRID:SCR_017571
+    name: DANDI API
+    schemaKey: Software
+    version: 0.1.0
 relatedResource: []
 repository: https://dandiarchive.org
 schemaKey: Dandiset
